--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,10 @@
     border-radius: 8px;
  
 }
+.test {
 
+ cursor:url(https://i.imgur.com/psJxi2y.png), auto;
+}
 body {
     background-color: var(--black
     );
@@ -151,20 +154,27 @@ input[type=checkbox]{
    }
 /* FIM DO NAVBAR STYLING */
 
-@import url(https://fonts.googleapis.com/css?family=Dosis:700);
+/* RANGE , VALUE E LABEL*/
+
+.label{  
+    font-size: 2em;
+    font-weight: bold;
+    position:relative;
+    display:block;
+    text-align: center;
+}
 
 .value {
-  
   text-align: center;
   font-weight: bold;
-  font-size: 10em;
-  width: 300px; 
-  height: 100px;
+  font-size: 7em; 
+  height: 80px;
   line-height: 60px;
   margin: 40px auto;
   letter-spacing: -.07em;
   text-shadow: white 2px 2px 2px;
 }
+
 input[type="range"] {
   position: relative;
   -webkit-appearance: none;
@@ -177,7 +187,7 @@ input[type="range"] {
 }
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  background-color: #e74c3c;
+  background-color: var(--blue);
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -193,9 +203,18 @@ input[type="range"]::-webkit-slider-thumb {
     transform: scale(1.6);
   }
 
-.container2 {
+.SpaceAround {
     display: flex;
   }
-  .container2 > div {
+  .SpaceAround > div {
     flex: 1; /*grow*/
   }
+
+.RangeAndLabel {
+    position:relative;
+    display:block;
+}
+.RangeSlider {
+    position:relative;
+    display:flex;
+}
