skidi bop mm dada

--- a/css/constants.css
+++ b/css/constants.css
@@ -4,6 +4,6 @@
     --secondaryBackground: #393E46;
     --primaryColor: #00ADB5;
     --contrastColor: #EEEEEE;
-    font-family: 'Cursive', cursive;
+    font-family: 'Times New Roman', cursive;
     color: var(--contrastColor);
     }
