--- a/css/style.css
+++ b/css/style.css
@@ -240,3 +240,15 @@ div.desc {
     padding: 15px;
     text-align: center;
 }*/
+
+
+.quote {
+    border: 1px solid black;
+    display: inline-block;
+    padding: 20px;
+    background-color: var(--secondaryBackground);
+    /* This set radius to all 4 corners */
+    border-radius: 10px;
+    text-align: center;
+
+}
