--- a/css/constants.css
+++ b/css/constants.css
@@ -4,7 +4,6 @@
     --secondaryBackground: #393E46;
     --primaryColor: #00ADB5;
     --contrastColor: #EEEEEE;
-    font-family: 'Helvetica', sans-serif;
+    font-family: 'Cursive', cursive;
     color: var(--contrastColor);
-
     }
