--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,22 @@
 /*Constants*/
 @import "constants.css";
-
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+.column2 {
+  float: left;
+  width:50%;
+  padding: 5px;
+}
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 .InfoPage {
   margin: 1em;
   text-align: center;
