added style-test.css and fontStyles.css and infoPage.css started to organize thingies NECESSÁRIO FAZER O FOOTER E TORNAR WEB RESPONSIVE AS PAGINAS

--- a/css/navBar.css
+++ b/css/navBar.css
@@ -1,6 +1,8 @@
 /*Constants*/
 @import "constants.css";
 
+/* https://flexboxfroggy.com */
+
 .nav .login-container {
     float: right;
     justify-content: right;
