--- a/css/login.css
+++ b/css/login.css
@@ -11,33 +11,33 @@
         text-align: center;
     }
     
-    .Title {
-        padding-top: 40px;
-        color:  var(--primaryColor);
-        font-weight: bold;
-        font-size: 3em;
-        text-align: center;
-    }
-    input[type="text"],input[type="password"], textarea {
-        background-color : var(--secondaryBackground); 
-        
-    }
+.Title {
+    padding-top: 40px;
+    color:  var(--primaryColor);
+    font-weight: bold;
+    font-size: 3em;
+    text-align: center;
+}
+input[type="text"],input[type="password"], textarea {
+    background-color : var(--secondaryBackground);
 
-    /* Cor dos placeholders */
-    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-        color: white;
-      }
-      ::-moz-placeholder { /* Firefox 19+ */
-        color: white;
-      }
-      :-ms-input-placeholder { /* IE 10+ */
-        color: white;
-      }
-      :-moz-placeholder { /* Firefox 18- */
-        color: white;
-      }
+}
 
-    .InputBox {
+/* Cor dos placeholders */
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: white;
+  }
+::-moz-placeholder { /* Firefox 19+ */
+color: white;
+}
+:-ms-input-placeholder { /* IE 10+ */
+color: white;
+}
+:-moz-placeholder { /* Firefox 18- */
+color: white;
+}
+
+.InputBox {
     width: 76%;
     color: white;
     font-weight: 700;
@@ -52,52 +52,55 @@
     border: 2px solid rgba(0, 0, 0, 0.02);
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
-    }
-    
-    form.form1 {
-        padding-top: 40px;
+}
 
+form.form1 {
+    padding-top: 40px;
+
+}
+
+.un:focus, .pass:focus {
+    border: 2px solid rgba(0, 0, 0, 0.18) !important;
+}
+
+.submit {
+  cursor: pointer;
+    border-radius: 5em;
+    color: #fff;
+    background: linear-gradient(to bottom, #00ADB5, #005eb5);
+    border: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: 'Ubuntu', sans-serif;
+
+    font-size: 13px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+}
+
+.forgot {
+    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+    color: var(--primaryColor);
+    padding-top: 15px;
+    text-align: center;
+}
+
+a {
+    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+    color: var(--primaryColor);
+
+    text-decoration: none
+}
+#Registo {
+    color: black;
+}
+
+@media (max-width: 600px) {
+    .main {
+        border-radius: 0px;
     }
-  
-    .un:focus, .pass:focus {
-        border: 2px solid rgba(0, 0, 0, 0.18) !important;
-    }
-    
-    .submit {
-      cursor: pointer;
-        border-radius: 5em;
-        color: #fff;
-        background: linear-gradient(to bottom, #00ADB5, #005eb5);
-        border: 0;
-        padding-left: 40px;
-        padding-right: 40px;
-        padding-bottom: 10px;
-        padding-top: 10px;
-        font-family: 'Ubuntu', sans-serif;
-    
-        font-size: 13px;
-        box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
-    }
-    
-    .forgot {
-        text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-        color: var(--primaryColor);
-        padding-top: 15px;
-        text-align: center;
-    }
-    
-    a {
-        text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-        color: var(--primaryColor);
-        
-        text-decoration: none
-    }
-    
-    @media (max-width: 600px) {
-        .main {
-            border-radius: 0px;
-        }
-        
-        
-    }
+
+
+}
 
