--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /*Constants*/
 @import "constants.css";
+
 /* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
   float: left;
@@ -21,13 +22,12 @@
   margin: 1em;
   text-align: center;
 }
+
 .InfoPage p{
-  
   padding: 0.4em;
-  
 }
 
- button {
+button {
     background-color: var(--primaryColor);
     border: none;
     color: var(--contrastColor);
@@ -39,21 +39,19 @@
     margin: 4px 4px;
     cursor: pointer;
     border-radius: 8px;
- 
 }
 .test {
 
  cursor:url(https://i.imgur.com/psJxi2y.png), auto;
 }
 body {
-    background-color: var(--background
-    );
-    overflow-x:hidden; 
-    background-image:url(assets/images/background.png);
-background-size: 75% ;
-background-attachment: scroll;
-background-repeat: true;
-mask-repeat: false;
+    background-color: var(--background);
+    overflow-x:hidden;
+    background-image:url('assets/images/background.png');
+    background-size: 75% ;
+    background-attachment: scroll;
+    background-repeat: true;
+    mask-repeat: false;
 }
 
 
@@ -121,13 +119,13 @@ input[type="range"]::-webkit-slider-thumb {
     position:relative;
     display:flex;
 }
-
+/* Para centrar toda a info na pagina */
 .container{
     margin: 0 auto;
     text-align: center;
 }
 
-
+/* Quote Pagina Inicial*/
 .quote {
     border: 1px solid black;
     display: inline-block;
