--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -1,21 +1,31 @@
-body {
-    font-family: 'lato', sans-serif;
-}
+/*Constants*/
+@import "constants.css";
+
 .scoreboard {
     max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
     padding-left: 10px;
     padding-right: 10px;
-}
-h2 {
-    font-size: 26px;
-    margin: 20px 0;
+    border: 5px var(--primaryColor) solid;
+    margin: auto;
+    display: inline-block;
+    width: 100%;
+    border-radius: 25px;
     text-align: center;
+    table-layout: fixed;
 }
-h2 small {
-    font-size: 0.5em;
+
+th, td{
+    padding: 1em;
 }
+
+hr{
+    height: 3px;
+    background-color: var(--primaryColor);
+    border: none;
+}
+
+
+/* Makes things Responsive*/
 .responsive-table li {
     border-radius: 3px;
     padding: 25px 30px;
