tabuleiro individual done

--- a/css/tabuleiro.css
+++ b/css/tabuleiro.css
@@ -32,6 +32,7 @@
 .painelJogo{
     margin: auto;
     width: 70%;
+    overflow: hidden;
     padding: 20px;
     border-radius: 25px;
     background-color: rgba(57, 62, 70, 0.70);
