--- a/css/navBar.css
+++ b/css/navBar.css
@@ -28,6 +28,7 @@ li {
     padding: 20px;
     background-color: var(--primaryColor);
     color: #fff;
+    font-family: 'Courier New', Courier, monospace;
 }
 .login-container {
     float: right;
@@ -60,7 +61,9 @@ li {
     position: absolute; 
     display: none;
     border-radius: 8px;
-    top: 35px;
+
+    top: 30px;
+    right: -32px;
 }
 .dropdown li + li {
     margin-top: 10px;
