--- a/css/jogo.css
+++ b/css/jogo.css
@@ -1,4 +1,71 @@
+/*Constants*/
+@import "constants.css";
 
+/* RANGE , VALUE E LABEL*/
+
+.label{
+  font-size: 2em;
+  font-weight: bold;
+  position:relative;
+  display:block;
+  text-align: center;
+}
+
+.value {
+  text-align: center;
+  font-weight: bold;
+  font-size: 7em;
+  height: 80px;
+  line-height: 60px;
+  margin: 40px auto;
+  letter-spacing: -.07em;
+  text-shadow: white 2px 2px 2px;
+}
+
+input[type="range"] {
+  display: none;
+  position: relative;
+  -webkit-appearance: none;
+  background-color: #bdc3c7;
+  width: 300px;
+  height: 5px;
+  border-radius: 5px;
+  margin: 0 auto;
+  outline: 0;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  background-color: var(--primaryColor);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 2px solid white;
+  cursor: pointer;
+  transition: .3s ease-in-out;
+}​
+ input[type="range"]::-webkit-slider-thumb:hover {
+   background-color: white;
+   border: 2px solid #e74c3c;
+ }
+input[type="range"]::-webkit-slider-thumb:active {
+  transform: scale(1.6);
+}
+
+.SpaceAround {
+  display: flex;
+}
+.SpaceAround > div {
+  flex: 1; /*grow*/
+}
+
+.RangeAndLabel {
+  position:relative;
+  display:block;
+}
+.RangeSlider {
+  position:relative;
+  display:flex;
+}
 /* class applies to select element itself, not a wrapper element */
 .custom-select {
   display: block;
