• No início de todos os ficheiros de código (HTML, CSS, e JavaScript) deve estar, em comentário, a sigla de unidade curricular e o ano letivo, o número do grupo, e o nome, número, e turma dos alunos.
FEITO

--- a/css/fontStyles.css
+++ b/css/fontStyles.css
@@ -1,3 +1,9 @@
+/* ITW - 2021/2022
+Grupo 46    PL21
+53687 - Ariana Dias
+56931 - Diogo Forte
+58628 - Miguel Miguel */
+
 body {
     font-family: "Courier New", monospace;
 }
