--- a/css/constants.css
+++ b/css/constants.css
@@ -1,3 +1,9 @@
+/* ITW - 2021/2022
+Grupo 46    PL21
+53687 - Ariana Dias
+56931 - Diogo Forte
+58628 - Miguel Miguel */
+
 :root {
     /* Main Color Pallete https://colorhunt.co/palette/222831393e4600adb5eeeeee*/
     --background: #222831;
