--- a/css/tabuleiro.css
+++ b/css/tabuleiro.css
@@ -1,3 +1,11 @@
+/* ITW - 2021/2022
+Grupo 46    PL21
+53687 - Ariana Dias
+56931 - Diogo Forte
+58628 - Miguel Miguel */
+
+@import "constants.css";
+
 .grid-container {
     display: inline-grid;
     grid-template-columns: repeat(9, 1fr);
