--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ Grupo 46    PL21
 }
 
 body {
+
     background-color: var(--background);
     overflow-x:hidden;
     background-image:url("../assets/images/background.png");
@@ -68,6 +69,25 @@ a {
     color: var(--primaryColor);
 }
 
+
+.container footer{
+    display: grid;
+    bottom:0;
+    grid-template-rows: auto;
+    grid-template-columns: 50% 50%;
+    background-color: var(--primaryColor);
+    width:100%;
+}
+footer > .cadeiraInfo{
+    grid-column: 1;
+    color: white;
+    text-align: center;
+}
+footer> .alunosInfo{
+    grid-column: 2;
+    color: white;
+    text-align: center;
+}
 
 @supports not (display: grid) {
   .container{
