--- a/css/footer.css
+++ b/css/footer.css
@@ -4,10 +4,12 @@ Grupo 46    PL21
 56931 - Diogo Forte
 58628 - Miguel Miguel */
 
-.footer{
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #efefef;
     text-align: center;
-    margin-top: 5%;
-    position:fixed;
-    left:0px;
-    bottom:0px;
-}
+  }
