--- a/css/login.css
+++ b/css/login.css
@@ -23,6 +23,7 @@ Grupo 46    PL21
     font-weight: bold;
     font-size: 3em;
     text-align: center;
+    font-size: 2.4em;
 }
 input[type="text"],input[type="password"], textarea {
     background-color : var(--secondaryBackground);
