--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ a {
 
 footer{
     display: grid;
+    position:relative;
     grid-template-rows: auto;
     grid-template-columns: 50% 50%;
     background-color: var(--primaryColor);
