--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ a {
 
 footer{
     display: grid;
-    position:relative;
+    position:fixed;
     grid-template-rows: auto;
     grid-template-columns: 50% 50%;
     background-color: var(--primaryColor);
@@ -81,6 +81,12 @@ footer{
     width: 100%;
 
 }
+.relative-bottom{
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+
 footer > .cadeiraInfo{
     grid-column: 1;
     color: white;
