tentei compor as cenas, n consegui bem, mas acho que o multyplayer com tempo nao funciona, entao tirei e substitui a avalição por nr de jogadas até ganhar, peço desculpa n conseguir fazer mais

--- a/css/tabuleiro.css
+++ b/css/tabuleiro.css
@@ -71,9 +71,12 @@ flex-direction: row;
 
 .jogadores{
     bottom: 0;
-    display: inline;
+    display: flex;
     text-align: center;
 }
+
+
+
 
 @media only screen and (max-width: 920px){
     .painelJogo{
